--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>Sync2mega</h1>
-          <p>Synchronize your files automatically to Mega</p>
+          <p>Synchronize your files automatically to Mega (like RSync)</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Rajaskank">Rajaskank</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
