--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1>
 <a id="sync2mega" class="anchor" href="#sync2mega" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sync2Mega</h1>
 
-<p>Synchronize your files automatically to Mega</p>
+<p>Synchronize your files automatically to Mega  (like RSync)</p>
 
 <h2>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h2>
