--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Sync2mega</h1>
+          <h1>Sync2Mega</h1>
           <p>Synchronize your files automatically to Mega (like RSync)</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Rajaskank">Rajaskank</a></span>
