--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Password = &lt;megapassword&gt;
 <pre><code>chmod 600 .megarc
 </code></pre>
 
-<p>Edit DATA and SQL as needed::</p>
+<p>Edit DATA and SQL as needed:</p>
 
 <pre><code># DATA
 echo "-&gt; Backup data in ${TEMPDIR}..."
