Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>Sync2Mega</h1>
-          <p>Synchronize your files automatically to Mega (like RSync)</p>
+          <p>Synchronize your files automatically to Mega.</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Rajaskank">Rajaskank</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
@@ -41,7 +41,7 @@
         <h1>
 <a id="sync2mega" class="anchor" href="#sync2mega" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sync2Mega</h1>
 
-<p>Synchronize your files automatically to Mega  (like RSync)</p>
+<p>Synchronize your files automatically to Mega.</p>
 
 <h2>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h2>
@@ -67,11 +67,6 @@
 <pre><code>[Login]
 Username = &lt;mailuseby@mega.co.nz&gt;
 Password = &lt;megapassword&gt;
-</code></pre>
-
-<p>Set permissions:</p>
-
-<pre><code>chmod 600 .megarc
 </code></pre>
 
 <p>Edit DATA and SQL as needed:</p>
